--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="about">
         <div class="about-content">
             <h1>About Me</h1>
-            <img src="/assets/img/IMG_3978.JPG" alt="" id="pic">
+            <img src="assets/img/IMG_3978.JPG" alt="" id="pic">
             <p>I am 19 year old CSE student studied at K S Rangasamy college of technology . I really enjoy solving problems as well
                 as making things pretty and easy to use . I can't stop learning new things, the more, the better.
             </p>
@@ -46,12 +46,12 @@
         </div>
         <div class="skill-content">
             <h1 style="color: white;" class="skill-h">Back-end</h1>
-            <img src="/assets/img/back-end.png" alt="" class="skill-img">
+            <img src="assets/img/back-end.png" alt="" class="skill-img">
             <p class="skill-p">sql,php</p>
         </div>
         <div class="skill-content">
             <h1 style="color: white;" class="skill-h">Programming</h1>
-            <img src="/assets/img/programming.png" alt=""class="skill-img">
+            <img src="assets/img/programming.png" alt=""class="skill-img">
             <p class="skill-p">c,c++,java,python</p>
         </div>
         <a href="#portfolio" class="port">My works<i id="portarrow" class="fa-solid fa-arrow-down"></i></a>
@@ -59,7 +59,7 @@
     <section id="portfolio">
         <h1 style="color: #1EB2A6;">Portfolio</h1>
         <div class="portfolio-content">
-            <img src="/assets/img/food.png" alt="" class="port-img">
+            <img src="assets/img/food.png" alt="" class="port-img">
             <div class="con">
                 <div class="icons">
                     <i class="fa-brands fa-html5"></i>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="portfolio-content">
-            <img src="/assets/img/toggle.png" alt="" class="port-img">
+            <img src="assets/img/toggle.png" alt="" class="port-img">
             <div class="con">
                 <div class="icons">
                     <i class="fa-brands fa-html5"></i>
