--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>A Web Developer in training</h2>
         <a href="#about">
             <div class="arrow">
-                <i class="fa-solid fa-arrow-down"></i>
+                <i class="fa fa-arrow-down"></i>
             </div>
         </a>
     </section>
