--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 as making things pretty and easy to use . I can't stop learning new things, the more, the better.
             </p>
         </div>
-        <a href="#skill" class="skills">skills<i id="skillarrow" class="fa-solid fa-arrow-down"></i></a>
+        <a href="#skill" class="skills">skills<i id="skillarrow" class="fafa-arrow-down"></i></a>
     </section>
     <section id="skill">
         <div class="skill-content">
@@ -54,7 +54,7 @@
             <img src="assets/img/programming.png" alt=""class="skill-img">
             <p class="skill-p">c,c++,java,python</p>
         </div>
-        <a href="#portfolio" class="port">My works<i id="portarrow" class="fa-solid fa-arrow-down"></i></a>
+        <a href="#portfolio" class="port">My works<i id="portarrow" class="fa fa-arrow-down"></i></a>
     </section>
     <section id="portfolio">
         <h1 style="color: #1EB2A6;">Portfolio</h1>
@@ -62,16 +62,16 @@
             <img src="assets/img/food.png" alt="" class="port-img">
             <div class="con">
                 <div class="icons">
-                    <i class="fa-brands fa-html5"></i>
-                    <i class="fa-brands fa-css3"></i>
-                    <i class="fa-brands fa-js"></i>
+                    <i class="fa fa-html5"></i>
+                    <i class="fa fa-css3"></i>
+                    <i class="fa fa-js"></i>
                 </div>
                 <div class="title">
                     Restaurant Food Card UI
                     Build using HTML,CSS,JS
                 </div>
                 <div class="btn">
-                    <a href="https://github.com/Santhosh1933/foodCard.git" target="none"><button>View Source code <i class="fa-solid fa-code"></i></button></a>
+                    <a href="https://github.com/Santhosh1933/foodCard.git" target="none"><button>View Source code <i class="fa fa-code"></i></button></a>
                     <a href="https://santhosh1933.github.io/foodCard/" target="none"><button>Try it Live <i class="fa fa-globe"></i></button></a>
                 </div>
             </div>
@@ -80,26 +80,26 @@
             <img src="assets/img/toggle.png" alt="" class="port-img">
             <div class="con">
                 <div class="icons">
-                    <i class="fa-brands fa-html5"></i>
-                    <i class="fa-brands fa-css3"></i>
-                    <i class="fa-brands fa-js"></i>
+                    <i class="fa fa-html5"></i>
+                    <i class="fa fa-css3"></i>
+                    <i class="fa fa-js"></i>
                 </div>
                 <div class="title">
                     Toggle Button UI
                     Build using HTML,CSS,JS
                 </div>
                 <div class="btn">
-                    <a href="https://github.com/Santhosh1933/togglebtn.git" target="none"><button>View Source code <i class="fa-solid fa-code"></i></button></a>
+                    <a href="https://github.com/Santhosh1933/togglebtn.git" target="none"><button>View Source code <i class="fa fa-code"></i></button></a>
                     <a href="https://santhosh1933.github.io/togglebtn/" target="none"><button>Try it Live <i class="fa fa-globe"></i></button></a>
                 </div>
             </div>
         </div>
-        <a href="https://github.com/Santhosh1933 " class="contact" target="none">More<i id="contactarrow" class="fa-solid fa-arrow-down"></i></a>
+        <a href="https://github.com/Santhosh1933 " class="contact" target="none">More<i id="contactarrow" class="fa fa-arrow-down"></i></a>
     </section>
     <section id="contact">
         <h1 class="contact-h">Contact me</h1>
         <p class="contact-p">Touch me with <u><a href="mailto:thoshsan2003@gmail.com" class="contact-a"><i id="contact-i" class="fa-brands fa-google"></i> thoshsan2003@gmail.com</a></u> </p>
-        <a href="https://github.com/Santhosh1933"><i class="fa-brands fa-github" id="git">My works</i></a>
+        <a href="https://github.com/Santhosh1933"><i class="fa fa-github" id="git">My works</i></a>
         <p id="footer">© santhosh.s || 2022</p>
     </section> 
 
