--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="skill">
         <div class="skill-content">
             <h1 style="color: white;" class="skill-h">Front-end</h1>
-            <img src="/assets/img/front-end.png" alt=""class="skill-img">
+            <img src="assets/img/front-end.png" alt=""class="skill-img">
             <p class="skill-p">html,css,js,bootstrap</p>
         </div>
         <div class="skill-content">
